// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageElement  1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 325.5,
      "margin": 2,
      "padding": 2,
      "width": 371,
    }
  }
>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 1,
        "width": null,
      }
    }
  />
</View>
`;

exports[`ImageElement empty images  1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 325.5,
      "margin": 2,
      "padding": 2,
      "width": 371,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 1,
        "width": null,
      }
    }
  />
</View>
`;

exports[`ImageElement with images  1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 325.5,
      "margin": 2,
      "padding": 2,
      "width": 371,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://images.pexels.com/photos/3408744/pexels-photo-3408744.jpeg",
      }
    }
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 1,
        "width": null,
      }
    }
  />
</View>
`;
